# tree-sitter-brazil-app-config

./: Cargo.toml  README.md  binding.gyp  grammar.js  package.json  tree-sitter.json
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c
test/: errors.txt.disabled
test/corpus/: comments.txt  dicts.txt  links.txt  lists.txt  operators.txt  strings.txt
