[package]
name = "tree-sitter-brazil-app-config"
description = "A parser for BrazilConfig files (.cfg)"
version = "0.1.0"
authors = ["Riccardo Strina <riccardo.strina@icloud.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "brazil-app-config"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tartarughina/tree-sitter-brazil-app-config"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
